# api-detection-tool

./: README.md  notes.md  pyproject.toml  requirements.txt  setup.py
git_hooks/: pre_commit.py
src/: __main__.py  core.py  utils.py
