[tool.poetry]
name = "api-detection-tool"
version = "0.1.0"
description = ""
authors = ["Granth Agarwal <heygranth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "75.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
